--- a/unit10/scss/_mobileMenu.scss
+++ b/unit10/scss/_mobileMenu.scss
@@ -55,6 +55,7 @@
 		background-color: $menuColor;
 		margin: 0;
 		padding: 0;
+		position: absolute;
 		z-index: 998; // places the links above the page content
 	}
     
