--- a/unit10/scss/_small.scss
+++ b/unit10/scss/_small.scss
@@ -41,6 +41,7 @@ main {
 }
 main h1 {
     font-weight: $normal-font;
+    z-index: 1;
 }
 
 
@@ -50,6 +51,7 @@ form fieldset {
     border: 1px solid #666;
     border-radius: 10px;
     padding: .5rem 2%;
+    z-index: 1;
 }
 form legend {
     color: $primary-gold;
